--- a/public/style.css
+++ b/public/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .form-container {
-  max-width: 270px;
+  max-width: 300px;
   width: 70%;
   background: white;
   text-align: center;
@@ -45,7 +45,7 @@ body {
   width: 70%; 
   height: 2px;
   background: black;
-  margin-top: 20px;
+  margin-top: 20px; 
 }
 
 .form-group {
@@ -54,7 +54,7 @@ body {
   gap: 4px;
   align-items: center;
   justify-content: center;
-  outline: 2px solid black;
+  border: 2px solid black;
   border-radius: 4px;
 }
 
